# dem

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev_env.py  install-dem.sh  mkdocs.yml  pyproject.toml  requirements.txt  venv.sh  versions.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pypi_release.yaml  run_codeanalysis.yaml  run_unittests.yaml
0.2/: 404.html  index.html
0.2/commands/: index.html
0.2/development_environments/: index.html
0.2/installation/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  sitemap.xml
0.3/basics/: index.html
0.3/commands/: index.html
0.3/design/: index.html
0.3/development_environments/: index.html
0.3/installation/: index.html
0.3/quickstart/: index.html
0.3/search/: search_index.json
0.4/: 404.html  index.html
0.4/basics/: index.html
0.4/commands/: index.html
0.4/design/: index.html
0.4/installation/: index.html
0.4/quickstart/: index.html
0.4/search/: search_index.json
0.5/: 404.html  index.html
0.5/basics/: index.html
0.5/commands/: index.html
0.5/design/: index.html
0.5/installation/: index.html
0.5/quickstart/: index.html
0.5/search/: search_index.json
0.5/stylesheets/: extra.css  scheme.css
0.6/: 404.html  index.html
0.6/basics/: index.html
0.6/commands/: index.html
0.6/design/: index.html
0.6/installation/: index.html
0.6/quickstart/: index.html
0.6/search/: search_index.json
0.7/: 404.html  index.html
0.7/basics/: index.html
0.7/commands/: index.html
0.7/design/: index.html
0.7/installation/: index.html
0.7/quickstart/: index.html
0.7/search/: search_index.json
0.8/: 404.html  index.html
0.8/basics/: index.html
0.8/commands/: index.html
0.8/configuration/: index.html
0.8/design/: index.html
0.8/installation/: index.html
0.8/quickstart/: index.html
0.8/search/: search_index.json
dem/: __init__.py  __main__.py  cli.py  dev_env_setup.py
dem/api/: main.py
dem/cli/: console.py  core_cb.py  info_command.py  list_command.py  main.py  menu.py  tool_selector.py
dem/cli/command/: add_cat_cmd.py  add_host_cmd.py  add_reg_cmd.py  add_task_cmd.py  assign_cmd.py  clone_cmd.py  cp_cmd.py  create_cmd.py  del_cat_cmd.py  del_reg_cmd.py  delete_cmd.py  export_cmd.py  import_cmd.py  info_cmd.py  info_command.py  init_cmd.py  install_cmd.py  list_cat_cmd.py  list_cmd.py  list_command.py  list_host_cmd.py  list_reg_cmd.py  list_tools_cmd.py  load_cmd.py  modify_cmd.py  pull_cmd.py  rename_cmd.py  run_cmd.py  set_default_cmd.py  uninstall_cmd.py
dem/cli/dev_env/: command_group.py  list_command.py
dem/cli/org/: command_group.py
dem/cli/tool/: command_group.py
dem/cli/tui/: printable_tool_image.py  tui_user_output.py
dem/cli/tui/panel/: tool_image_selector.py  tool_type_selector.py
dem/cli/tui/renderable/: menu.py
dem/cli/tui/window/: dev_env_settings_window.py  dev_env_settings_window.tcss
dem/core/: api_server.py  container_engine.py  core.py  data_management.py  dev_env.py  dev_env_catalog.py  dev_env_setup.py  exceptions.py  hosts.py  image_management.py  platform.py  properties.py  registry.py  task.py  tool_images.py  user_output.py  validate.py
dem/core/commands/: add_host_cmd.py  assign_cmd.py  cp_cmd.py  create_cmd.py  del_host_cmd.py  del_reg_cmd.py  del_task_cmd.py  delete_cmd.py  import_cmd.py  info_cmd.py  init_cmd.py  install_cmd.py  list_cat_cmd.py  list_cmd.py  list_host_cmd.py  modify_cmd.py  rename_cmd.py  run_cmd.py  uninstall_cmd.py
docs/: basics.md  commands.md  configuration.md  design.md  dev_env_settings.md  development_environments.md  index.md  installation.md  quickstart.md
docs/Darker_Grotesque/: OFL.txt
docs/stylesheets/: extra.css  scheme.css
example_dev_env_json/: dev_env.json
example_json/: dev_env.json  dev_env_org.json
tests/: __init__.py  fake_data.py  test__main__.py  test_data.py  test_dem.py
tests/cli/: __init__.py  test_add_cat_cmd.py  test_add_host_cmd.py  test_add_reg_cmd.py  test_add_task_cmd.py  test_assign_cmd.py  test_clone_cmd.py  test_core_cb.py  test_cp.py  test_cp_cmd.py  test_create_cmd.py  test_del_cat_cmd.py  test_del_host_cmd.py  test_del_reg_cmd.py  test_del_task_cmd.py  test_delete_cmd.py  test_dev_env_info_command.py  test_dev_env_list_command.py  test_export_cmd.py  test_import_cmd.py  test_info_cmd.py  test_info_command.py  test_init_cmd.py  test_install_cmd.py  test_list_cat_cmd.py  test_list_cmd.py  test_list_command.py  test_list_host_cmd.py  test_list_reg_cmd.py  test_list_tools_cmd.py  test_load_cmd.py  test_main.py  test_main_options.py  test_modify_cmd.py  test_pull_cmd.py  test_rename_cmd.py  test_run_cmd.py  test_set_default_cmd.py  test_uninstall_cmd.py
tests/cli/tui/: test_tui_user_output.py
tests/cli/tui/renderable/: test_menu.py
tests/core/: __init__.py  test_container_engine.py  test_core.py  test_data_management.py  test_dev_env.py  test_dev_env_catalog.py  test_dev_env_setup.py  test_hosts.py  test_image_management.py  test_platform.py  test_registry.py  test_tool_images.py  test_validate.py
