[tool.poetry]
name = "axem-dem"
version = "0.1.2"
description = "Manager for Containerized Development Environments"
authors = ["Janos Murai <janos.murai@axemsolutions.io>"]
license = "Eclipse Public License - v2.0"
readme = "README.md"
homepage = "https://axemsolutions.io/"
documentation = "https://axemsolutions.io/dem_doc/"
repository = "https://github.com/axem-solutions/dem"
keywords = ["iot", "embedded", "edge", "devops", "tools", "containers"]
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Natural Language :: English",
	"Topic :: Software Development",
	"Topic :: Software Development :: Build Tools",
	"Topic :: Software Development :: Compilers",
	"Topic :: Software Development :: Debuggers",
	"Topic :: Software Development :: Embedded Systems",
	"Topic :: Software Development :: Testing"
]
packages = [{include = "dem"}]

[tool.poetry.scripts]
dem = "dem.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
docker = "6.1.3"
readchar = "4.0.5"
requests = "2.31.0"
rich = "13.4.2"
typer = "0.9.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.7"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
mock = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
